--- a/WebLegemClient/src/css/elementos/gadget_control_entidad.css
+++ b/WebLegemClient/src/css/elementos/gadget_control_entidad.css
@@ -21,7 +21,8 @@
 
 .panel_control{
     background:rgb(237, 237, 237); 
-    display:block; 
+    display:flex; 
+    justify-content:flex-start;
     position:absolute; 
     width:100%; 
     top:40px; 
