--- a/WebLegemClient/src/css/noticias.css
+++ b/WebLegemClient/src/css/noticias.css
@@ -4,7 +4,7 @@
     padding-right: 5%;
     padding-top: 20px;
     font-family: Arial, "Helvetica", sans-serif;
-    background:rgb(255, 255, 255);
+    background:#fff;
 }
 
 
