--- a/WebLegemClient/src/css/pagina_principal.css
+++ b/WebLegemClient/src/css/pagina_principal.css
@@ -23,7 +23,7 @@ body {
 
 
 .animatio.ng-enter  {
-        -webkit-animation:.5s fadeIn ease-out;  
+        -webkit-animation:.2s zoomIn ease-out;  
         -moz-animation:-5s fadeIn ease-out;  
-        animation:.5s fadeIn ease-out;
+        animation:.2s zoomIn ease-out;
     }
