--- a/WebLegemClient/src/css/plantillas/administracion.css
+++ b/WebLegemClient/src/css/plantillas/administracion.css
@@ -1,6 +1,11 @@
 ﻿.contenedor_administracion{/* no sirve por que esta oculto el html*/
-    margin:auto;
-    padding:10px;
+    margin:10px 0;
+    width:90vw;
+    border-radius:5px;
+    background:#fff; 
+    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 /*-----------------------------------*/
@@ -13,9 +18,33 @@
 /*CONTENIDO DEL MODULO ADMINISTRACION Y GESTION DOCUMENTAL*/
 /*-----------------------------------*/
 .view_administracion{
-    width:100vw;
-    display:flex;
-    justify-content:center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.a_desvanecer {
+    -moz-animation: .8s a_desvanecer;
+    -o-animation: .8s a_desvanecer;
+    -webkit-animation: .8s a_desvanecer;
+    animation: .8s a_desvanecer;
+}
+
+@keyframes a_desvanecer {
+  0%{
+    opacity:0;
+  }
+  10%{
+      opacity:0;
+  }
+
+  70% {
+    opacity:.8;
+  }
+
+  100% {
+    opacity:1;
+  }
 }
 
 .view_gestion_documental{
@@ -26,13 +55,9 @@
 }
 
 .contenido{
-    margin:10px 0;
-    width:90%;
-    border-radius:5px;
-    background:#fff; 
-    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    width:100%;
+    border-radius:0 0 5px 5px;
+    background:#fff;    
 }
 
 .contenido > div{
