--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -2,11 +2,11 @@
     width:100%;
     height:50px;
     position:relative;
-    background:rgba(0, 0, 0,.4);
+    background:rgba(0, 0, 0,.2);
 }
 
 .figura_logo{
-    background:#710000;
+    background:rgb(35, 41, 55);
     display: inline-block;
     height: 75px;
     margin-left:0; 
@@ -19,7 +19,7 @@
     content: ""; 
     border-style: solid;
     border-width: 50px 60px 0 60px;
-    border-color: #710000 transparent transparent transparent;
+    border-color:rgb(35, 41, 55) transparent transparent transparent;
     z-index: 1;
 
     height: 0; 
@@ -30,15 +30,15 @@
 }
 
 .nombre_pagina{
+    font-family:'Bauhaus 93';
     margin-left: 30px;
-    text-shadow: 1px -1px 2px #310000;
-    font-size: 75px;
     position: absolute;
     top: 0;
     left: 100px;
-    font-family: 'Times New Roman';
-    font-weight: bold;
-    color: #ffffff;
+    font-size: 75px;
+    color:white;
+    text-shadow: 1px 1px  rgba(140,140,140,0.6), -1px -1px 1px rgba(0, 0, 0, .67);
+    text-transform: uppercase;
 }
 
 .escudo_pagina{
