se arreglo problemas con la base de datos, al momento de crear documentos con contenido, el servicio ya funciona

--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -36,7 +36,7 @@
                     <content id="busqueda_padre">
                         <content id="busqueda_left">
 
-                            <content id="filtros_busqueda" style="display:none;">
+                            <content id="filtros_busqueda">
                                 <ul>
                                     <li class="content_li_filtro">
                                         <content class="li_left">
@@ -152,7 +152,7 @@
                                     <p id="contenido_bus">
                                         {{documento.asunto}}
                                     </p>
-                                    <p id="entidad_bus">Entidad:<i>{{documento.entidad.nombre}}  </i> </p> <p id="fecha_bus">  Fecha: <i>{{documento.anio_publicacion}} </i>  </p>
+                                    <p id="entidad_bus">Entidad:<i>{{documento.entidad.nombre}}  </i> </p> <p id="fecha_bus">  Fecha: <i>{{documento.anioPublicacion}} </i>  </p>
 
                                 </li>
                             </ul>
