--- a/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
@@ -2,12 +2,6 @@
     <section class="layout_padre">
 
         <div class="hijo_left">
-
-            <label class="texto_labels" style="margin-bottom:10px;">"Nuevo" para crear una entidad.</label>
-            <button class="btn_con_ico" type="button" ng-click="vm.log(); vm.crear(vm.entidad)">
-                <span class="ico-plus tamano_botones_1"></span>Nuevo
-            </button>
-
             <label class="texto_labels" style="margin-top:10px;">Lista de entidades</label>
             <ul>
                 <li ng-repeat="entidad in vm.entidades">
@@ -17,35 +11,40 @@
                     <span ng-click="vm.editar(entidad)">editar</span>
                 </li>
             </ul>
-
-
         </div>
 
         <div class="hijo_right">
-            <label class="texto_labels" for="nombre-entidad">Nombre de la entidad</label>
-            
-                <input class="a_input input_administracion" id="nombre-entidad" type="text"
-                       placeholder="Ingrese el nombre de la entidad" ng-model="vm.entidad.nombre" />
+            <div class="control_administracion">
+                <button class="btn_con_ico" type="button" ng-click="vm.log(); vm.crear(vm.entidad)">
+                    <span class="ico-plus tamano_botones_1"></span>Nuevo
+                </button>
                 <button class="btn_con_ico" type="button" value="Editar">
                     <span class="ico-pencil tamano_botones_1"></span>Editar
                 </button>
                 <button class="btn_con_ico" type="button" value="Eliminar">
                     <span class="ico-trash tamano_botones_1"></span>Remover
                 </button>
+            </div>
+
+            <label class="texto_labels" for="nombre-entidad">Nombre de la entidad</label>
+
+            <input class="a_input input_administracion" id="nombre-entidad" type="text"
+                    placeholder="Ingrese el nombre de la entidad" ng-model="vm.entidad.nombre" />
             
 
-            <label class="texto_labels" for="tipo-entidad">Tipo de la entidad</label>
-                <div class="span_select">
-                    <select id="tipoEntidadSelect" class="select" ng-options="tipoEntidad as tipoEntidad.nombre for tipoEntidad in vm.tiposEntidad " ng-model="vm.tipoEntidad"></select>
-                    <span class="span_select ico-angle-down"></span>
-                </div>
 
-                <button class="btn_con_ico" type="button" ng-click="vm.actualizar( vm.entidad )">
-                    <span class="ico-plus tamano_botones_1"></span>Actualizar
-                </button>
-                <button class="btn_con_ico" type="button" ng-click="vm.cancelar()">
-                    <span class="ico-times tamano_botones_1"></span>Cancelar
-                </button>
+            <label class="texto_labels" for="tipo-entidad">Tipo de la entidad</label>
+            <div class="span_select">
+                <select id="tipoEntidadSelect" class="select" ng-options="tipoEntidad as tipoEntidad.nombre for tipoEntidad in vm.tiposEntidad " ng-model="vm.tipoEntidad"></select>
+                <span class="span_select ico-angle-down"></span>
+            </div>
+
+            <button class="btn_con_ico" type="button" ng-click="vm.actualizar( vm.entidad )">
+                <span class="ico-plus tamano_botones_1"></span>Actualizar
+            </button>
+            <button class="btn_con_ico" type="button" ng-click="vm.cancelar()">
+                <span class="ico-times tamano_botones_1"></span>Cancelar
+            </button>
 
         </div>
     </section>
