--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -1,12 +1,6 @@
 ﻿<div class="contenido">
     <section class="layout_padre">
-        <div class="hijo_left">
-
-            <label class="texto_labels" style="margin-bottom:10px;">"Nuevo" para crear un tipo de entidad.</label>
-            <button class="btn_con_ico" ng-if="!vm.editando" ng-click="vm.create()">
-                <span class="ico-plus tamano_botones_1"></span>Nuevo
-            </button>
-
+        <div class="hijo_left">    
             <label class="texto_labels" style="margin-top:10px;">Lista de tipo de entidades</label>
             <ul class="a_listado" style="width:100%;">
                 <li ng-repeat="tipoEntidad in vm.tiposEntidad">
@@ -19,16 +13,21 @@
         </div>
 
         <div class="hijo_right">
-
-            <label class="texto_labels">Nombre del tipo entidad</label>
-            <form class="form_tipo_entidad">
-                <input class="a_input input_administracion" style="width:auto;" type="text" ng-model="vm.tipoEntidad.nombre" placeholder="Ingrese el nombre Entidad" />
+            <div class="control_administracion">
+                <button class="btn_con_ico" ng-if="!vm.editando" ng-click="vm.create()">
+                    <span class="ico-plus tamano_botones_1"></span>Nuevo
+                </button>
                 <button class="btn_con_ico" type="button" ng-if="!vm.editando" ng-click="vm.create()">
                     <span class="ico-pencil tamano_botones_1"></span>Editar
                 </button>
                 <button id="remover_tes" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
                     <span class="ico-trash tamano_botones_1"></span>Remover
                 </button>
+            </div>
+
+            <label class="texto_labels">Nombre del tipo entidad</label>
+            <form class="form_tipo_entidad">
+                <input class="a_input input_administracion" style="width:auto;" type="text" ng-model="vm.tipoEntidad.nombre" placeholder="Ingrese el nombre Entidad" />                
             </form>
 
             <div class="entidad_control" style="width:100%; margin-bottom:10px;">
