--- a/WebLegemClient/src/css/plantillas/administracion.css
+++ b/WebLegemClient/src/css/plantillas/administracion.css
@@ -15,7 +15,7 @@
     background:#fff;
 }
 
-/*CONTENIDO DEL MODULO ADMINISTRACION Y GESTION DOCUMENTAL*/
+/*CONTENIDO DEL MODULO ADMINISTRACION*/
 /*-----------------------------------*/
 .view_administracion{
     width: 100%;
@@ -31,27 +31,17 @@
 }
 
 @keyframes a_desvanecer {
-  0%{
-    opacity:0;
-  }
-  10%{
-      opacity:0;
-  }
-
-  70% {
-    opacity:.8;
-  }
-
-  100% {
-    opacity:1;
-  }
+  0%{opacity:0;}
+  10%{opacity:0;}
+  70% {opacity:.8;}
+  100% {opacity:1;}
 }
 
+/*MOVER DE AUI, ESTO NO VA*/
 .view_gestion_documental{
     width:100vw;
     display:flex;
-    justify-content:center;
-    
+    justify-content:center;   
 }
 
 .contenido{
@@ -62,4 +52,49 @@
 
 .contenido > div{
     padding:2em;
+}
+
+/*Control Administracion*/
+
+.control_administracion {
+    display: flex;
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    background:rgba(0, 0, 0, 0.05);
+    justify-content: flex-end;
+    padding:10px;
+}
+
+.control_administracion > button{
+    margin:5px;
+}
+
+.layout_padre{
+    display:flex;
+    height:90vh;
+    width:100%;
+}
+
+.hijo_left{  
+    -ms-flex-direction:column;
+    -webkit-flex-direction:column;
+    flex-direction:column;
+    padding:10px;
+    width:30%; 
+    height:100%;
+    background:rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    
+}
+
+.hijo_right{
+    -ms-flex-direction:column;
+    -webkit-flex-direction:column;
+    flex-direction:column;
+    padding:10px 30px;
+    width:90%; 
+    height:auto;
 }
