--- a/WebLegemClient/src/css/plantillas/tipo_documento.css
+++ b/WebLegemClient/src/css/plantillas/tipo_documento.css
@@ -7,7 +7,6 @@
 
 #remover_td, #editar_td {
     display:block; 
-    visibility:hidden; 
-    margin: 0 0 5px 15px; 
+    visibility:collapse;     
 }
 
