--- a/WebLegemClient/src/app/administracion/administracion.tmpl.html
+++ b/WebLegemClient/src/app/administracion/administracion.tmpl.html
@@ -12,9 +12,9 @@
             <li ui-sref="administracion.entidad" ng-click="vm.activo($event)">
                 Entidad
             </li>
-            <li ui-sref="administracion.tipo-anotacion" ng-click="vm.activo($event)">
+            <!--<li ui-sref="administracion.tipo-anotacion" ng-click="vm.activo($event)">
                 Tipo Anotacion
-            </li>
+            </li>-->
         </ul>
     </div>
     <div ui-view class="view_administracion a_desvanecer"></div>
