--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -17,10 +17,10 @@
                 <button class="btn_con_ico" ng-if="!vm.editando" ng-click="vm.create()">
                     <span class="ico-plus tamano_botones_1"></span>Nuevo
                 </button>
-                <button class="btn_con_ico" type="button" ng-if="!vm.editando" ng-click="vm.create()">
+                <button id="editar_te" class="btn_con_ico" type="button" ng-if="!vm.editando" ng-click="vm.create()">
                     <span class="ico-pencil tamano_botones_1"></span>Editar
                 </button>
-                <button id="remover_tes" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
+                <button id="remover_te" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
                     <span class="ico-trash tamano_botones_1"></span>Remover
                 </button>
             </div>
