--- a/WebLegemClient/src/css/elementos/barra_navegacion.css
+++ b/WebLegemClient/src/css/elementos/barra_navegacion.css
@@ -1,19 +1,13 @@
-﻿.contenedor_navegacion{
-    position: relative;
-    height: 40px;
-    background:#000000; 
-}
-
-/*barra de navegacion*/
+﻿/*barra de navegacion*/
 .navegacion{
-    position:relative;
-    bottom: 0;
-    right:0;
-    z-index:8;
+    height:50%;
+    display:flex;
+    align-items:flex-end;
 }
 
 .bar_nav{
     height:30px;
+    background:#37404A;
     /*
     -webkit-box-shadow: 0 1px 2px 0 rgba(36, 38, 36, 0.93);
     -moz-box-shadow: 0 1px 2px 0 rgba(36, 38, 36, 0.93);
