--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -1,12 +1,16 @@
 ﻿.header {
     width:100%;
-    height:50px;
+    height:40px;
     position:relative;
-    background:rgba(0, 0, 0,.2);
+    background:#37404A;
+    border-bottom:1px solid #30383e;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
 }
 
 .figura_logo{
-    background:rgb(35, 41, 55);
+    background:#2e9815;
     display: inline-block;
     height: 75px;
     margin-left:0; 
@@ -19,7 +23,7 @@
     content: ""; 
     border-style: solid;
     border-width: 50px 60px 0 60px;
-    border-color:rgb(35, 41, 55) transparent transparent transparent;
+    border-color:#2e9815 transparent transparent transparent;
     z-index: 1;
 
     height: 0; 
@@ -29,36 +33,18 @@
     width: 0; 
 }
 
-.nombre_pagina{
-    font-family:'Bauhaus 93';
-    margin-left: 30px;
-    position: absolute;
-    top: 0;
-    left: 100px;
-    font-size: 75px;
-    color:white;
-    text-shadow: 1px 1px  rgba(140,140,140,0.6), -1px -1px 1px rgba(0, 0, 0, .67);
-    text-transform: uppercase;
-}
-
-.escudo_pagina{
-    position:absolute;
-    margin-left: 20px;
-    margin-top: 10px;
-    height: 80px;
-    z-index:2;
-}
 
 .btn_deslizable{
     background:rgba(55, 64, 74, 0.0);
     border:none;
     width:auto;
-    height:50px;
+    height:40px;
     color:white;
     font-size:medium;
     margin-right:10px;
     padding:10px;
     position:relative;
+    cursor:pointer;
 }
 
 .btn_deslizable > span{
@@ -74,9 +60,9 @@
 }
 
 .btn_deslizable:hover{ 
-    background: rgba(255, 255, 255, 0.11);
+    /*background: rgba(255, 255, 255, 0.11);*/
 }
 .btn_deslizable:hover span, .btn_deslizable:hover p{ 
-    color:#F39C22;
+    color:rgb(255, 106, 0);
 }
 
