--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -1,4 +1,4 @@
-﻿<div class="contenido animatio ng-enter" id="holas">
+﻿<div class="contenido_gd animatio ng-enter" id="holas">
     <label class="titulo">Crear Documento</label>
 
     <div ng-controller="uploaderController as an">
