--- a/WebLegemClient/src/app/noticias/noticias.tmpl.html
+++ b/WebLegemClient/src/app/noticias/noticias.tmpl.html
@@ -1,8 +1,7 @@
-﻿<div class="contenido_noticias">
+﻿<div class="contenido_gd">
 
     
-    <label class="titulo_news">Noticias Universidad De Nariño </label>
-    <hr class="divisor_news"/>
+    <label class="titulo">Noticias Universidad De Nariño </label>
     <!--<div class="principales_news">
         <div class="col1">
 
