--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="contenido">
+<div class="contenido_gd">
 
     <label class="titulo">Buscador de normatividad de la  Universidad de Nariño</label>
 
