--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -1,4 +1,4 @@
-﻿<div class="contenido animatio ng-enter" id="holas">
+﻿<div class="contenido_gd animatio ng-enter" id="holas">
     <label class="titulo">Crear Documento</label>
     <div>
         <label class="subtitulos_labels">
@@ -6,6 +6,10 @@
         </label>
         <hr class="divisor_gestion_documental" />
         <form id="informacion_documento">
+            <div style="background:blue; width:40px; height:30px; flex-grow:2;"></div>
+            <div style="background:magenta; width:40px; height:30px; flex-grow:2;"></div>
+            <!--
+
             <div>
                 <label class="texto_labels" for="tipo-documento">Tipo de Documento:</label>
                 <div>
@@ -15,7 +19,6 @@
                     <span class="span_select_a ico-angle-down"></span>
                 </div>
             </div>
-
             <div>
                 <label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">Entidad:</label>
                 <div>
@@ -25,22 +28,23 @@
                     <span class="span_select_a ico-angle-down"></span>
                 </div>
             </div>
-
             <div>
                 <label class="texto_labels" for="numero">Numero:</label>
                 <input class="a_input " type="text" id="numero" ng-model="vm.documento.numero" />
             </div>
-            
             <div>
                 <label class="texto_labels" for="año">Año:</label>
                 <input class="a_input" id="año" type="text" maxlength="4" ng-model="vm.documento.anioPublicacion" />
             </div>                
             <div>
+                <button class="btn_con_ico" ng-click="vm.aceptar()">
+                    <span class="ico-chevron-left tamano_botones_1"></span>Atras
+                </button>
                 <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.asunto">
                     Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
                 </button>
             </div>
-
+                -->
         </form>
     </div>
 </div>
