--- a/WebLegemClient/src/css/elementos/tabs.css
+++ b/WebLegemClient/src/css/elementos/tabs.css
@@ -20,8 +20,7 @@
     -moz-transition: ease-out .3s;
     -o-transition: ease-out .3s;
     -webkit-transition: ease-out .3s;
-    transition: ease-out .3s; 
-    border-radius:5px 5px 0 0;
+    transition: ease-out .3s;
     overflow:hidden;
 }
 
@@ -37,7 +36,6 @@
 .contenedor_tabs > ul > li.active_tab { /*tab activa*/
     background: white;
     color: #2a2a2a;
-    border-radius: 5px 5px 0 0;
     margin-top: -4px;
-    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.60);
+    box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.60);
 }
