--- a/WebLegemClient/src/css/estilos_weblegem.css
+++ b/WebLegemClient/src/css/estilos_weblegem.css
@@ -6,12 +6,12 @@
     text-align:center;
     height:auto;
     background:  #37404A;
-    border-radius:4px 4px 0 0;
     display:block;
     padding:0.5em;
     font-family:sans-serif;
     font-size:1.1em;
     font-weight:600;
+    border-bottom:4px solid rgb(169, 171, 174);
 }
 
 /*-------------------*/
